dcmle package version history

Version 0.1-4, Jan 31, 2012
    * sourceDcExample: topic is coerced to character.
    * Documentation updated.
    * NAMESPACE updated to export all classes,
      and import new functions from dclone.

Version 0.1-3, Jan 25, 2012
    * Preparing for new release.
    * Define S4 generic for 'summary'.

Version 0.1-2, Oct 18, 2011
    * params slot can be list (to follow new dclone options).
    * show/summary method for dcMle class got headings:
      Settings, Coefficients, Convergence.
    * dcmle failed with initsfun when length(n.clones)==1
      and n.clones>1: now fixed.
    * dcmle checks for getOption("mc.cores") and uses it
      when cl=NULL and mc.cores > 1. This allows
      forking to happen automatically via the global option.

Version 0.1-1, Sept 29, 2011
    * dcExample, sourceDcExample, listDcExample: new
      functions added to deal with examples from R-Forge.

Version 0.1-0, Sept 27, 2011
    * main functions, classes, methods work
    * dependencies and namespace figured out
    * documentation is ready